# imagetest-cli

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml
ci/: before_deploy.ps1  before_deploy.sh
src/: config.rs  main.rs  test.rs  validate.rs
