[package]
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
name = "imagetest-cli"
version = "0.1.0"

[[bin]]
name = "imagetest"
path = "src/main.rs"

[dependencies]
clap = "2.26.2"
colored = "1.5.3"
futures = "0.1.16"
hyper = "0.11.6"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
tokio-core = "0.1.10"
toml = "0.4.5"
